working auth login/register/refresh/logout

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=wodozbior
+
+
+
+spring.data.mongodb.uri=zawvodev_leaks ///zmien to 
+
+logging.level.root=ERROR
+
+server.port=8080
+springdoc.swagger-ui.url=http://localhost:8080
+springdoc.swagger-ui.disable-swagger-default-url=true
+jwt.secret=zawvodev_leaks //////zmien to 
+
+
+
+
