--- a/pom.xml
+++ b/pom.xml
@@ -53,9 +53,11 @@
             <artifactId>postgresql</artifactId>
             <version>42.7.3</version>
         </dependency>
-
-
-        <!-- JWT JSON Parser (Jackson) -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-jackson</artifactId>
