fake data last version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,7 @@ spring.datasource.url=jdbc:postgresql://nowaccy.tplinkdns.com:5432/wody
 
 spring.datasource.username=wody_user
 
-spring.datasource.password=leakhasla123#
-
+spring.datasource.password=brawoWojtek123#
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Dialekt Hibernate dostosowany do PostgreSQL
@@ -25,4 +24,9 @@ spring.jpa.show-sql=false
 # Formatowanie zapyta? SQL (czytelno??)
 spring.jpa.properties.hibernate.format_sql=true
 
-##imgw.api.url=https://danepubliczne.imgw.pl/api/data/synop/
+hydro.api.url=https://danepubliczne.imgw.pl/api/data/hydro/
+hydro2.api.url=https://danepubliczne.imgw.pl/api/data/hydro2/
+hydro.api.delay=60000
+spring.task.scheduling.pool.size=5
+
+logging.level.com.example.wodozbior.service.HydroApiService=DEBUG
