--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Automatyczna aktualizacja schematu bazy danych (mo?liwe opcje: none, validate, update, create, create-drop)
-spring.jpa.hibernate.ddl-auto=create-drop
-
+spring.jpa.hibernate.ddl-auto=none
 # Pokazuj zapytania SQL w konsoli (do debugowania)
 spring.jpa.show-sql=false
 
